style: reformat Java sources to Google Java Format
Spotless was declared in the parent pom but never bound to the verify
phase, so local `mvn verify` never enforced the style. CI calls
`spotless:check` directly and just flagged ~180 files at 4-space indent
that needed Google Java Format's 2-space indent.

`mvn spotless:apply` mechanical reformat — no functional changes.
Tests still green (76 unit + 0 IT skip-default).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>